# OBS-Key-Moments-Plugin

UI/frontend-plugins/key-moments/: AutoScenes.ui  CMakeLists.txt  KeyMoments.ui  auto-scene.cpp  auto-scene.h  auto-scenes.cpp  auto-scenes.h  key-moments.cpp  key-moments.h  key-moments.vcxproj  key-moments.vcxproj.filters
UI/frontend-plugins/key-moments/data/locale/: en-US.ini
